--- a/payrollsystemsti/AdminTabs/attendanceMonitoring.resx
+++ b/payrollsystemsti/AdminTabs/attendanceMonitoring.resx
@@ -132,6 +132,18 @@
   <metadata name="dgStatus.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
+  <metadata name="dgEmpID.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="dgTime.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="dgDate.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="dgStatus.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="btnClose.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
@@ -163,6 +175,208 @@
   <metadata name="timer.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>126, 5</value>
   </metadata>
+  <data name="loadingIndicator.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        R0lGODlhMAAwAPUAAAAAACGjZiKkZyKlaCOmaCOnaSOoaiSoaiSpayWpayWqbCWrbSarbSasbSasbiat
+        bietbieubyevcCiwcCixcSmxcimyciu2dSu2diy3diy3dyy4dy25eC26eS66eS67eS67ei68ei+8ey+9
+        ey++fDC+fDHAfjHBfjHBfzLCfzPEgWHjpwAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACH5BA0EAAAAIf8LTkVUU0NBUEUyLjADAQAAACwAAAAAMAAw
+        AAAG/kCAcEgsGo/IpHLJbDqf0Kh0SgUErths1ZntegNb5HfcDRPJaKxZwG673/B3dUCv25H2/GBK6Pv9
+        TH+CUQWFhoVQh4dQBgYHjwdUkJBPkAiXW5eaCE2bCAlmCaKjTAqmp2anqEoLra5mQgyys0oNtrewAA67
+        vEoPv7+5QhDExEkRyMnCAMnKRxLQ0MtC0dJHE9jY0wDZ2kcU4ODb4eJHFefn2xbr69vu7/DTJibxSiko
+        J/T1SCkp+/+wRIQAaITEiBEiCBYpYVChEg4Oi3TgADEigA8eOlgUAuLDEAwXnKxYMS1DBgwiRy7TkGGI
+        ChVCXgpROZOksA0aYsoEsJMmFgCf03byhFlzn1ChQP8J3ci0qdNtQQAAIfkEDQQAAAAsAAAAADAAMACF
+        AAAAIaNmIqRnIqVoI6ZoI6dpI6hqJKhqJKlrJalrJapsJattJqttJqxtJqxuJq1uJ61uJ65vJ69wKLBw
+        KLFxKbFyKbJyK7Z1K7Z2LLd2LLd3LLh3Lbl4Lbp5Lrp5Lrt5Lrt6Lrx6L7x7L717L758ML58McB+McF+
+        McF/MsJ/M8SBYeOnYuOnYeSnYuSnYuOoYeSoAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAABv5AgHBILBqPyKRyyWw6n9CodEoFBK7YbNWZ7XoDW+R33A0TyWisWcBuu9/wd3VA
+        r9uR9vxgSuj7/Ux/glEFhYaFUIeHUAYGB48HVJCQT5AIl1uXmghNmwgJZgmio0wKpqdmp6hKC62uZkIM
+        srNKDba3sAAOu7xKD7+/uUIQxMRJEcjJwgDJykcS0NDLQtHSRxPY2NMA2dpHFODg2+HiRxXn59sW6+vb
+        7u/w0yYm8UopKCf09UgpKfv/sESEAGiExIgRIggWKWFQoRIODot04AAxIoAPHjpYFALiwxAMF5y8aDEt
+        QwYMTmC8YLFMQ4YhKlQIiSlkxYohL2As26BhJhxNAD9tDnHx4t1PoDJr3qx39KhQhUc3Sp1KdVsQACH5
+        BA0EAAAALAAAAAAwADAAhQAAACGjZiKkZyKlaCOmaCOnaSOoaiSoaiSpayWpayWqbCWrbSarbSasbSas
+        biatbietbieubyevcCiwcCixcSmxcimyciu2dSu2diy3diy3dyy4dy25eC26eS66eS67eS67ei68ei+8
+        ey+9ey++fDC+fDHAfjHBfjHBfzLCfzPEgWHkp2Lkp2HjqGLjqGLkqAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAb+QIBwSCwaj8ikcslsOp/QqHRKBQSu2GzVme16A1vk
+        d9wNE8lorFnAbrvf8Hd1QK/bkfb8YEro+/1Mf4JRBYWGhVCHh1AGBgePB1SQkE+QCJdbl5oITZsICWYJ
+        oqNMCqanZqeoSgutrmZCDLKzSg22t7AADru8Sg+/v7lCEMTESRHIycIAycpHEtDQy0LR0kcT2NjTANna
+        RxTg4Nvh4kcV5+fbFuvr2+7v8NMmJvFKKSgn9PVIKSn7/7BEhABohMSIESIIFilhUKESDg6LdOAAMSKA
+        Dx46WBQC4sMQDBectGgxLUMGDE5WuJimIcMQFSqEwBTyYqUQFy+WbdAgcyYbAJ8qhwR15/NnzJss9hUt
+        6sImwaIbo0qdui0IACH5BA0EAAAALAAAAAAwADAAhQAAACGjZiKkZyKlaCOmaCOnaSOoaiSoaiSpayWp
+        ayWqbCWrbSarbSasbSasbiatbietbieubyevcCiwcCixcSmxcimyciu2dSu2diy3diy3dyy4dy25eC26
+        eS66eS67eS67ei68ei+8ey+9ey++fDC+fDHAfjHBfjHBfzLCfzPEgWLkp2HjqGLjqGHkqGLkqAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAb+QIBwSCwaj8ikcslsOp/Q
+        qHRKBQSu2GzVme16A1vkd9wNE8lorFnAbrvf8Hd1QK/bkfb8YEro+/1Mf4JRBYWGhVCHh1AGBgePB1SQ
+        kE+QCJdbl5oITZsICWYJoqNMCqanZqeoSgutrmZCDLKzSg22t7AADru8Sg+/v7lCEMTESRHIycIAycpH
+        EtDQy0LR0kcT2NjTANnaRxTg4Nvh4kcV5+fbFuvr2+7v8NMmJvFKKSgn9PVIKSn7/7BEhABohMSIESII
+        FilhUKESDg6LdOAAMSKADx46WBQC4sMQDBc2AsiQAcOTF9M0ZBiiQoWQlkJYtBiCctkGDS9hAtAJYCYX
+        zXc8ebZYsS+oSyEtXDjkKbKp06e5ggAAIfkEDQQAAAAsAAAAADAAMACFAAAAIaNmIqRnIqVoI6ZoI6dp
+        I6hqJKhqJKlrJalrJapsJattJqttJqxtJqxuJq1uJ61uJ65vJ69wKLBwKLFxKbFyKbJyK7Z1K7Z2LLd2
+        LLd3LLh3Lbl4Lbp5Lrp5Lrt5Lrt6Lrx6L7x7L717L758ML58McB+McF+McF/MsJ/M8SBM8SCM8WCNMSB
+        NMSCNMWCYuSoAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABv5AgHBI
+        LBqPyKRyyWw6n9CodEoFBK7YbNWZ7XoDW+R33A0TyWisWcBuu9/wd3VAr9uR9vxgSuj7/Ux/glEFhYaF
+        UIeHUAYGB48HVJCQT5AIl1uXmghNmwgJZgmio0wKpqdmp6hKC62uZkIMsrNKDba3sAAOu7xKD7+/uUIQ
+        xMRJEcjJwgDJykcS0NDLQtHSRxPY2NMA2dpHFODg2+HiRxXn59sW6+vb7u/w0yYm8UopKCf09UgpKfv/
+        sESEAGiExIgRIggWKWFQoRIODot04AAxIoAPHjpYFALiwxAMFzYCyJABg0gNGYaoWCFEhYohMOBt0KCS
+        hZAVLIXE3Nfi5RTNnAB21nvhYghOmBFdilzKtOm0IAAh+QQNBAAAACwAAAAAMAAwAIUAAAAho2YipGci
+        pWgjpmgjp2kjqGokqGokqWslqWslqmwlq20mq20mrG0mrG4mrW4nrW4nrm8nr3AosHAosXEpsXIpsnIr
+        t3Ust3Ytt3Ytt3csuHctuHctuXgtunkuunkuu3kuu3ouvHovvHsvvXsvvnwwvnwxwH4xwX4xwX8ywn80
+        w4EzxIEzxYEzxYI0xIIAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAG/kCAcEgsGo/IpHLJbDqf0Kh0SgUErths1ZntegNb5HfcDRPJaKxZwG673/B3dUCv25H2/GBK6Pv9
+        TH+CUQWFhoVQh4dQBgYHjwdUkJBPkAiXW5eaCE2bCAlmCaKjTAqmp2anqEoLra5mQgyys0oNtrewAA67
+        vEoPv7+5QhDExEkRyMnCAMnKRxLQ0MtC0dJHE9jY0wDZ2kcU4ODb4eJHFefn2xbr69vu7/DTJyfxSiop
+        KPT1SCoq+/+wRogAaKQECRIjCBYxYVChkg4Oi3joADEiABAfPFgUEgLEEAwXNgLgkAGDyA0Zhrxo4ZCD
+        BpVDVqxwyOJFzJkKW7i4KbKnBs+fQJcFAQAh+QQNBAAAACwAAAAAMAAwAIUAAAAho2YipGcipWgjpmgj
+        p2kjqGokqGokqWslqWslqmwlq20mq20mrG0mrG4mrW4nrW4nrm8nr3AosHAosXEpsXIpsnIrtncrt3cs
+        tnUtuHYtuHctuXcsuHgtuXgtunktu3ovunovu3suvHovvHovvHsvvXsvvnwwvnwxwH4xwX4xwX8ywn80
+        xIIAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAG+UCA
+        cEgsGo/IpHLJbDqf0Kh0SgUErths1ZntegNb5HfcDRPJaKxZwG673/B3dUCv25H2/GBK6Pv9TH+CUQWF
+        hoVQh4dQBgYHjwdUkJBPkAiXW5eaCE2bCAlmCaKjTAqmp2anqEoLra5mQgyys0oNtrewAA67vEoPv7+5
+        QhDExEkRyMnCAMnKRxLQ0MtC0dJHE9jY0wDZ2kcU4ODb4eJHFefn2xbr69vu7/DTKSnxSiwrKvT1SCws
+        +/+wSowAaOSECRMlCBZBYVChEg4Oi4DwADEiABIhPlgUIoLEkAsZNgrRgEFkBw1DWkTcQESlSAAuX8qc
+        SbOmzTBBAAAh+QQNBAAAACwAAAAAMAAwAIUAAAAho2YipGcipWgjpmgjp2kjqGokqGokqWslqWslqmwl
+        q20mq20mrG0mrG4mrW4nrW4nrm8nr3AosHAosXEpsXIpsnIsuHYsuHgtuXgtunguu3kuu3ouvHkuvHou
+        vXovvHsuvXsvvnsuvHwvvnwwvnwwvn0wv30xwH4xwX4xwX8ywn8AAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAG60CAcEgsGo/IpHLJbDqf0Kh0SgUE
+        rths1ZntegNb5HfcDRPJaKxZwG673/B3dUCv25H2/GBK6Pv9TH+CUQWFhoVQh4dQBgYHjwdUkJBPkAiX
+        W5eaCE2bCAlmCaKjTAqmp2anqEoLra5mQgyys0oNtrewAA67vEoPv7+5QhDExEkRyMnCAMnKRxLQ0MtC
+        0dJHE9jY0wDZ2kcU4ODb4eJHFefn2xbr69vu7/DTKCjxSisqKfT1SCsr+/+wRnwAaMQEiRAgCBY5UUKE
+        wodQNmSAOKQDBw0UhXjokPHIhY5CPnbEALKkyZMoU6rMFQQAIfkEDQQAAAAsAAAAADAAMACFAAAAIaNm
+        IqRnIqVoI6ZoI6dpI6hqJKhqJKlrJalrJapsJattJqttJqxtJqxuJq1uJ61uJ65vJ69wKLBwKLFxKbFy
+        KbJyLrl4Lrp6Lrx6L7x7L717L799ML17ML99Mb99McB+MsF/McJ/MsN/McKAM8KAMsOAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAABuBAgHBILBqPyKRyyWw6n9CodEoFBK7YbNWZ7XoDW+R33A0TyWisWcBuu9/wd3VAr9uR9vxg
+        Suj7/Ux/glEFhYaFUIeHUAYGB48HVJCQT5AIl1uXmghNmwgJZgmio0wKpqdmp6hKC62uZkIMsrNKDba3
+        sAAOu7xKD7+/uUIQxMRJEcjJwgDJykcS0NDLQtHSRxPY2NMA2dpHFODg2+HiRxXn59sW6+vb7u/w0yEg
+        8UojJCL09UglJvv/sDRkAGjEQ4cNGggW+cBBoUMpFx4SwSBxyMCKGDNq3Mixo8ePIN0FAQAh+QQNBAAA
+        ACwAAAAAMAAwAIQAAAAho2YipGcipWgjpmgjp2kjqGokqGokqWslqWslqmwlq20mq20mrG0mrG4mrW4n
+        rW4nrm8nr3AosHAosXEpsXIpsnIwvXwwvnwxwH0xwH4xwX4xwX8ywn8ywoAzwoAFxyAgjmRpnmiqrmzr
+        vnAszzQQ3Hheu3nvBzvUb9gLkohInFHAbDqf0GdtQK1aUdbsYEboer2srzhWKJvLsPMZZjAc3gcaHP6C
+        I+67ux7R2iMSRgmCgywKhodGh4gqC42ORiIMkpMqDZaXkAAOm5wqD5+fmSIQpKQpEaipogCpqicSsLCr
+        IrGyJxO4uLMAubonFMDAu8HCJxXHx7sWy8u7zs/QuxrRKh8cGxnUKR4d2t7f0RgX4CYY5Ofo6err7O3u
+        7/Dx8vP0JyEAIfkEDQQAAAAsAAAAADAAMACEAAAAIaNmIqRnIqVoI6ZoI6dpI6hqJKhqJKlrJalrJaps
+        JattJqttJqxtJqxuJq1uJ61uJ65vJ69wKLBwKLFxKbFyKbJyMr9+MsJ+MsKAAAAAAAAAAAAAAAAAAAAA
+        AAAABb0gII5kaZ5oqq5s675wLM80ENx4Xrt57wc71G/YC5KISJxRwGw6n9BnbUCtWlHW7GBG6Hq9rK84
+        Viiby7DzGWYwHN4HGhz+giPuu7se0dojEkYJgoMsCoaHRoeIKguNjkYiDJKTKg2Wl5AADpucKg+fn5ki
+        EKSkKRGoqaIAqaonErCwqyKxsicTuLizALm6JxTAwLvBwicVx8e7FsvLu87P0NHSJxkYF9PY2drb3N3e
+        3+Dh4uPk5ebn6Onq3CEAIfkEDQQAAAAsAAAAADAAMACEAAAAIaNmIqRnIqVoI6ZoI6dpI6hqJKhqJKlr
+        JalrJapsJattJqttJqxtJqxuJq1uJ61uJ65vJ69wKLBwKLFxKbJyKbNzKrNzKrR0AAAAAAAAAAAAAAAA
+        AAAAAAAAAAAABb0gII5kaZ5oqq5s675wLM80ENx4Xrt57wc71G/YC5KISJxRwGw6n9BnbUCtWlHW7GBG
+        6Hq9rK84Viiby7DzGWYwHN4HGhz+giPuu7se0dojEkYJgoMsCoaHRoeIKguNjkYiDJKTKg2Wl5AADpuc
+        Kg+fn5kiEKSkKRGoqaIAqaonErCwqyKxsioTE7MAuLy6LRTAwL4sFcXFwysWysrIKhfPz80rGNTS1tfY
+        2drb3N3e3+Dh4uPk5ebn6OnqKyEAIfkEDQQAAAAsAAAAADAAMACEAAAAIaNmIqRnIqVoI6ZoI6dpI6hq
+        JKhqJKlrJalrJapsJqttJqxuJ61uJ65vJ69wKLBwKLFxKbJyKbNzKrNzKrR0K7V1K7Z2LLd2LLh3Lbl4
+        Lbp5Lrt5AAAAAAAAAAAABcIgII5kaZ5oqq5s675wLM80ENx4Xrt57wc71G/YC5KISJxRwGw6n9BnbUCt
+        WlHW7GBG6Hq9rK84Viiby7DzGWYwHN4HGhz+giPuu7se8dInjAmBgjAKCkaFiIZGMguNjosxDJKTkDEN
+        l5eVMA6cnZovD6Ghny4QpqakLRGrq6ksErCwrisTtbWzKhS6urgpFb+/vSgWxMTCJhfJysclGM7OzCQZ
+        09TRIxrY2dYjG90b2yQc4uDk5ebn6Onq6+zt7u/vIQAh+QQNBAAAACwAAAAAMAAwAIUAAAAho2YipGci
+        pWgjpmgjp2kkqGokqWslqWslqmwmq20mrG4nrW4nrm8nr3AosHAosXEpsnIps3Mqs3MqtHQrtXUrtnYs
+        t3YsuHctuXgtunkuu3kuvHovvHsvvXwwvnwwv30xwH4xwX8ywn8AAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAG00CAcEgsGo/IpHLJbDqf0Kh0SgUErths1ZntegNb5XeMDSPJZLNRwG6732/1cEBH0u/4gdxJ6Pv9
+        e04Fg4SDgU4GiYqHTgeOj4xNCJOUkUsJmJmWSwqdnptJC6KjoEkMp6elSA2srapHDrGxr0YPtra0RRC7
+        u7lEEcDAvkMSxcXDQhPKysgAFM/PzRXT08gW19jIF9vbyBjf4MgZ4+TDGufoyBvr7MMc7/DDHfP0vh73
+        +Pe5H/z9/LkgAgoMOCyEwYPIRCgU0UzIiBENI0qcSLFimCAAIfkEDQQAAAAsAAAAADAAMACFAAAAIaNm
+        IqRnIqVoI6ZoI6dpJKhqJKlrJalrJapsJqttJqxuJ61uJ65vJ69wKLBwKLFxKbJyKbNzKrNzKrR0K7V1
+        K7Z2LLd2LLh3Lbl4Lbp5Lrt5Lrx6L7x7L718ML58ML99McB+McF+McF/MsJ/MsOAM8SBAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAABt5AgHBILBqPyKRyyWw6n9CodEqtWqOBwPWazW6n3e43Kiiby2PnYM1mp5uEuFz+bhbu+Hu9
+        aej7900HgoOATAiHiIVKCYyNikoKkZKPSAuWl5RIDJubmUcNoKGeRg6lpaNFD6qqqEQQr6+tQxG0tLJC
+        Erm5twATvr68FMLCvBXGxrcWysu3F87OtxjS07cZ1teyGtrbtxve37Ic4uOyHebnrR7q6+qjH+/w8G8g
+        SCD29/h1Ifv8/f78e0QIHDhwhMGDIwCRWMiwoUMShUpInEiRIiUTGDNq5MWxo0dFQQAAIfkEDQQAAAAs
+        AAAAADAAMACEAAAAJqttJqxuJ61uJ65vJ69wKLBwKLFxKbJyKbNzKrNzKrR0K7V1K7Z2LLd2LLh3Lbl4
+        Lbp5Lrt5Lrt6Lrx6L7x7L717L718ML58ML99McB+McF+McF/MsJ/MsOAM8SBBcAgII5kaZ5oqq5s675w
+        LM90bd94ru987//AoHBILBqPvIASORI4nUzRYDqNAgjYrLXA5VoNYLD1QCZbEWi0NcFmWxVwuHVBp1sZ
+        eHy0we9HHYCAUQ+EhSwQiBA6iYkrEY+QOJCRKxKWlziXmCwTnZ42FKGiLxWlpjSmpy8WrK2sMBexsrEx
+        GLa3tyy4uzMZvr/AKMDDGTUax8jJysvKOBvP0NHSHNTVHDsd2drb3Nw+HuDh4uMeQx/n6OlW6+ztQSEA
+        IfkEDQQAAAAsAAAAADAAMACFAAAAJattJqxtJq1uJ65vJ69wKLBwKLFxKbFyKbJzKrNzKrR0K7V1K7Z2
+        LLd2LLh3Lbl4Lbp5Lrt5Lrt6Lrx6L7x7L717L718ML58ML59Mb59ML99McB+McF+McF/MsB+M8B/MsF/
+        MsJ/NMJ/M8GAM8KAMsOAM8OBNMKANcOBM8SBNcSCAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABtpAgHBILBqPyKRyyWw6n9CodEqtWq/YrHbL7Xq/
+        4LB4TC6bwYH02Shot9fDgVwOBxDu+Hphv68DDICAfgeEhH4IiIh+CYyMfgqQkH4LlJR+DJiYfg2cnX4O
+        oKB+D6SldRCoqVqpEE0Rr7BYsLFLEra3WLe4TBO9vlYUwcJPFcXGVMbHTxbMzcxQGRfS0xdRGNfY2Ewa
+        IyDZ11Mb4uPkSOMkKCHlVBzt7u/w8CEpKR/tWB35+vv8Hv4eJ1ac2CKioMGDCA2WWOHFhMOHECOaGKOi
+        osWLfjJq3BgmCAAh+QQNBAAAACwAAAAAMAAwAIUAAAAho2YipGcipWgjpmgjp2kjqGokqGokqWslqWsl
+        qmwlq20mrG0mrW4nrm8nr3AosHAosXEpsXIpsnMqs3MqtHQrtXUrtnYst3YsuHctuXgtunkuu3kuu3ov
+        vHsvvXswvnwwv30xwH4xwX4ywn8yw4Azw4A0woE1w4EzxIE1xII0xYI1xYM2xII2xYM0xYQAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAG6UCAcEgsGo/IpHLJbDqf0Kh0
+        Sq1ah4HAtZrNbqfd7vcpKJvL4+ZgzWanl4S4XP5WFu74e31pMBz+B3tLgAiFgkqFiQmHSgqOj4xIC5OU
+        kUgMmJmWRw2dnZtGDqKjoEUPp6elRRCsrKpEEbGxr0MStra0QhO7u7kAFMDAvhXExL4WyMi+F8zNvhjQ
+        0L4Z1NW5GtjZvhvc3bkc4OG+HeTlvh7o6bkf7O3stCDx8vKvIfb3+EgmeyL9/v8ARZxAcWiEwYMIEZpQ
+        wYiEw4cQH5po0SJSiYsYM5Yw4YIFqBQgQ4Jc8cKXyZMoGQUBACH5BA0EAAAALAAAAAAwADAAhQAAACGj
+        ZiKkZyKlaCOmaCOnaSOoaiSoaiSpayWpayWqbCWrbSasbSatbieubyevcCiwcCixcSmxcimycyqzcyq0
+        dCu1dSu2diy3diy4dy25eC26eS67eS67ei+8ey+9ezC+fDC/fTHAfjHBfjLCf2LkqAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAbaQIBwSCwaj8ikcslsOp/QqHRKBQSu2GzVme16A1vkd4wNG8lkM1HAbrvfb7VwQK/bkXU5
+        Yc/ny5kFgYKBf00GBgeJB4VNigiPjEyPkwmRTAqYmZZKC52em0oMoqOgSQ2np6VIDqytqkcPsbGvRxC2
+        trRGEbu7uUUSwMC+RBPFxcNDFMrKyEIVz8/NABbU1NIX2NnSGNzc0hng4c0a5OXSG+jpzRzs7dId8PHS
+        HvT1zR/4+fjIIP3+/chCCBwo0EkJOSISKnxy8M+IhyOgNJRDgoS0ixgzatyoMQgAIfkEDQQAAAAsAAAA
+        ADAAMACFAAAAIaNmIqRnIqVoI6ZoI6dpI6hqJKhqJKlrJalrJapsJattJqxtJq1uJ65vJ69wKLBwKLFx
+        KbFyKbJzKrNzKrR0K7V1K7Z2LLd2LLh3Lbl4Lbp5Lrt5YeSnYeOoYuOoYuSoAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAABt5AgHBILBqPyKRyyWw6n9CodEoFBK7YbNWZ7XoDW+R33A0TyWisWcBu
+        u9/wd3VAr9uR9vxgSuj7/Ux/glEFhYaFUIeHUAYGB48HVJCQT5AIl1uXmghNmwgJZgmioE0Kpqdmpk8L
+        rK1mUgyxsq9RDba2tFAOu7y5Tw/AwL5PEMXFw04RysrITRLPz81ME9TU0ksU2dnXShXe3txJFuPj4UgX
+        6OnmRxjt7etGGfLz8EQa9/j1RBv8G/pEHAL+G0iwYEEPHgwC6PCBIIghHx7+k7iw4USFAChi3Mixo8cl
+        QQAAIfkEDQQAAAAsAAAAADAAMACEAAAAIaNmIqRnIqVoI6ZoI6dpI6hqJKhqJKlrJalrJapsJattJqtt
+        JqxtJqxuJq1uJ61uJ65vJ69wKLBwKLFxKbFyKbJzKrNzKrR0NMOBYuOnYeSnYuSnYeOoYuOoYeSoBdUg
+        II5kaZ5oqq5s675wLM80ENx4Xrt57wc71G/YC5KISJxRwGw6n9BnbUCtWlHW7GBG6Hq9rK84Viiby7Dz
+        GWYwHN4HGhz+giPuu7se0dojEkYJgoMsCoaHRoeIKguNjkYiDJKTKg2Wl5AADpucKg+fn5kiEKSkKRGo
+        qaIAqaonErCwqyKxsicTuLizALoqFL+/uy0VxMTCLBbJyccrF87OzCoY09HV1tfY2drb3N3e3+DHHhvg
+        Hx4a2x0eIx4f1xkZ7CMc69bw7Bzb9yLt4f7/AAO2CAEAIfkEDQQAAAAsAAAAADAAMACEAAAAIaNmIqRn
+        IqVoI6ZoI6dpI6hqJKhqJKlrJalrJapsJattJqttJqxtJqxuJq1uJ61uJ65vJ69wKLBwKLFxKbFyKbJy
+        M8SBM8SCNMSCYeOnYeSnYuSnYuOoYuSoAAAABd0gII5kaZ5oqq5s675wLM80ENx4Xrt57wc71G/YC5KI
+        SJxRwGw6n9BnbUCtWlHW7GBG6Hq9rK84Viiby7DzGWYwHN4HGhz+giPuu7se0dojEkYJgoMsCoaHRoeI
+        KguNjkYiDJKTKg2Wl5AADpucKg+fn5kiEKSkKRGoqaIAqaonErCwqyKxsicTuLizALm6JxTAwLvBwicV
+        x8e7FsvLu87P0NHS09TV1tfY2drb3N0tGhrd4OHPGSMXFyIeHSPg0OYiGBgiG+wi7uUj8iMdHNj7IjrY
+        s4bOm8GDCGuEAAAh+QQNBAAAACwAAAAAMAAwAIQAAAAho2YipGcipWgjpmgjp2kjqGokqGokqWslqWsl
+        qmwlq20mq20mrG0mrG4mrW4nrW4nrm8nr3AosHAosXEpsXIpsnIsuHYsuHgzxIEzxYEzxYI0xIJh46cA
+        AAAAAAAF5CAgjmRpnmiqrmzrvnAszzQQ3Hheu3nvBzvUb9gLkohInFHAbDqf0GdtQK1aUdbsYEboer2s
+        rzhWKJvLsPMZZjAc3gcaHP6CI+67ux7R2iMSRgmCgywKhodGh4gqC42ORiIMkpMqDZaXkAAOm5wqD5+f
+        mSIQpKQpEaipogCpqicSsLCrIrGyJxO4uLMAubonFMDAu8HCJxXHx7sWy8u7zs/Q0dLT1NXW19jZ2tvc
+        3S0dHbsXL+Dhq+MiHBoiGRki4CPwohgkHCPt7+YA8rsZ9uzu8k3TsOFewH36quHzxrChQxohAAAh+QQN
+        BAAAACwAAAAAMAAwAIUAAAAho2YipGcipWgjpmgjp2kjqGokqGokqWslqWslqmwlq20mq20mrG0mrG4m
+        rW4nrW4nrm8nr3AosHAosXEpsXIpsnIrtncrt3cstnUtuHYtuHcsuHguuXguunouvHozxIEzxIIzxYI0
+        xIE0xII0xYJh46cAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAG+0CAcEgsGo/IpHLJbDqf0Kh0SgUErths1ZntegNb5Hfc
+        DRPJaKxZwG673/B3dUCv25H2/GBK6Pv9TH+CUQWFhoVQh4dQBgYHjwdUkJBPkAiXW5eaCE2bCAlmCaKj
+        TAqmp2anqEoLra5mQgyys0oNtrewAA67vEoPv7+5QhDExEkRyMnCAMnKRxLQ0MtC0dJHE9jY0wDZ2kcU
+        4ODb4eJHFefn2xbr69vu7/Dx8vP09fb3+Pn68B37Qh7+AHwgciGDExMmtmnAcBDhMg4ahoAIIQQECCEO
+        MSYUtoEICBEVLwLIOHLjthEiAVgcQhJeCRISU7aktzKgzZs4zQQBACH5BA0EAAAALAAAAAAwADAAhQAA
+        ACGjZiKkZyKlaCOmaCOnaSOoaiSoaiSpayWpayWqbCWrbSarbSasbSasbiatbietbieubyevcCiwcCix
+        cSmxcimyciu3dSy3di23di23dyy4dy24dy25eC26eC67eS67ei68eS68ejC9fDC+fDPEgWHjpwAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAb+QIBwSCwaj8ikcslsOp/QqHRKBQSu2GzVme16A1vkd9wNE8lorFnAbrvf8Hd1QK/b
+        kfb8YEro+/1Mf4JRBYWGhVCHh1AGBgePB1SQkE+QCJdbl5oITZsICWYJoqNMCqanZqeoSgutrmZCDLKz
+        Sg22t7AADru8Sg+/v7lCEMTESRHIycIAycpHEtDQy0LR0kcT2NjTANnaRxTg4Nvh4kcV5+fbFuvr2+7v
+        8PHy8/T19vdLJCP4RCT8/04+dAAIIAQIDwRFhBiC4YITEyamcciA4SHEZRsyDClRQghHIRdBRhTGQYPH
+        jwBQhgSwchrKlB1Fznv5siW9lwRz6tyZKwgAIfkEDQQAAAAsAAAAADAAMACFAAAAIaNmIqRnIqVoI6Zo
+        I6dpI6hqJKhqJKlrJalrJapsJattJqttJqxtJqxuJq1uJ61uJ65vJ69wKLBwKLFxKbFyKbJyK7Z1K7Z2
+        LLd2LLd3LLh3Lbl3Lbl4Lbp5Lbt6L7p6L7t7Lrx6L7x6L7x7L717L799ML17ML99Mb99Mr9+MsJ+MsKA
+        M8SBYeOnAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABv5A
+        gHBILBqPyKRyyWw6n9CodEoFBK7YbNWZ7XoDW+R33A0TyWisWcBuu9/wd3VAr9uR9vxgSuj7/Ux/glEF
+        hYaFUIeHUAYGB48HVJCQT5AIl1uXmghNmwgJZgmio0wKpqdmp6hKC62uZkIMsrNKDba3sAAOu7xKD7+/
+        uUIQxMRJEcjJwgDJykcS0NDLQtHSRxPY2NMA2dpHFODg2+HiRxXn59sW6+vb7u/w8fJHLCsq8/j58CQi
+        +kUoJ0qQ8EckhQmCSjggJPKhg8KFI0B4WCgkxIghGC44ceFiWoYMGDZyXKYhw5AWLYSgFDKSZUdhGzSo
+        XAmAZksAN6fRrJnS5Q68nTtz4ttJsajRo9uCAAAh+QQNBAAAACwAAAAAMAAwAIUAAAAho2YipGcipWgj
+        pmgjp2kjqGokqGokqWslqWslqmwlq20mq20mrG0mrG4mrW4nrW4nrm8nr3AosHAosXEpsXIpsnIrtnUr
+        tnYst3Yst3csuHctuXgtunkuunkuu3kuu3ouvXovvHsuvXsvvnsuvHwvvnwwvnwwvn0wv30xwH0xwH4x
+        wX4xwX8ywn8ywoAzwoAzxIFh46cAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAG
+        /kCAcEgsGo/IpHLJbDqf0Kh0SgUErths1ZntegNb5HfcDRPJaKxZwG673/B3dUCv25H2/GBK6Pv9TH+C
+        UQWFhoVQh4dQBgYHjwdUkJBPkAiXW5eaCE2bCAlmCaKjTAqmp2anqEoLra5mQgyys0oNtrewAA67vEoP
+        v7+5QhDExEkRyMnCAMnKRxLQ0MtC0dJHE9jY0wDZ2kcU4ODb4eJHFefn2xbr69vu7/DbK/FKMC0sKvRJ
+        Ly76/rAlQvwzgsLECBEDi6Q4QSKhEg4Oi3TgADEigA8eOlgUAuLDEAwXnMiQMS1DBgwiRy7TkGFIjBhC
+        XgpROZOksA0aYsoEsJMmFgCf03byhFlTn1ChQP0J3ci0qdNtQQAAIfkEDQQAAAAsAAAAADAAMACFAAAA
+        IaNmIqRnIqVoI6ZoI6dpI6hqJKhqJKlrJalrJapsJattJqttJqxtJqxuJq1uJ61uJ65vJ69wKLBwKLFx
+        KbFyKbJyK7Z1K7Z2LLd2LLd3LLh3Lbl4Lbp5Lrp5Lrt5Lrt6Lrx6L7x7L717L758ML58McB+MsF/McJ/
+        MsN/McKAM8KAMsOAM8SBYeOnAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAABv5AgHBILBqPyKRyyWw6n9CodEoFBK7YbNWZ7XoDW+R33A0TyWisWcBuu9/wd3VAr9uR
+        9vxgSuj7/Ux/glEFhYaFUIeHUAYGB48HVJCQT5AIl1uXmghNmwgJZgmio0wKpqdmp6hKC62uZkIMsrNK
+        Dba3sAAOu7xKD7+/uUIQxMRJEcjJwgDJykcS0NDLQtHSRxPY2NMA2dpHFODg2+HiRxXn59sW6+vb7u/w
+        0ycm8UopKij09UgrLPv/sESEAGiExIgRIggWKWFQoRIODot04AAxIoAPHjpYFALiwxAMF5y4cDEtQwYM
+        Ikcu05BhSIsWQl4KUTmTpLANGmLKBLCTJhYAn9N28oRZc59QoUD/Cd3ItKnTbUEAADs=
+</value>
+  </data>
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>56</value>
   </metadata>
