employeeSalary(Basic, Overtime, PhilHealth, Pag-ibig)

--- a/payrollsystemsti/AdminTabs/employeeSalary.resx
+++ b/payrollsystemsti/AdminTabs/employeeSalary.resx
@@ -126,4 +126,10 @@
   <metadata name="dgBasic.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
+  <metadata name="dgTHW.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="dgOT.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
 </root>
