--- a/payrollsystemsti/enrollFingerprint.resx
+++ b/payrollsystemsti/enrollFingerprint.resx
@@ -132,6 +132,21 @@
   <metadata name="dgIsDeleted.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
+  <metadata name="dgEmpID.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="dgLastName.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="dgFirstName.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="dgFingerID.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="dgIsDeleted.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
   <metadata name="serialPort1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
@@ -336,6 +351,33 @@
         Dba3sAAOu7xKD7+/uUIQxMRJEcjJwgDJykcS0NDLQtHSRxPY2NMA2dpHFODg2+HiRxXn59sW6+vb7u/w
         0ycm8UopKij09UgrLPv/sESEAGiExIgRIggWKWFQoRIODot04AAxIoAPHjpYFALiwxAMF5y4cDEtQwYM
         Ikcu05BhSIsWQl4KUTmTpLANGmLKBLCTJhYAn9N28oRZc59QoUD/Cd3ItKnTbUEAADs=
+</value>
+  </data>
+  <data name="btnClose.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABkAAAAZCAYAAADE6YVjAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        DAAACwwBP0AiyAAAAPhJREFUSEvtk1sOgkAMRfnlz5jgYxHobtmArshHdDM6nmKbIENwOvDJSZoJ7b29
+        IQzFQjYhhJJqqK22XIhP/aW2YlQg3ClXkOjVJzTajmG4oa6tLIQntdfRKOi6vgc17kPgCmLuCzAQJgXR
+        zwswMIwG8TwtwMA4GMQ5T4DBgn7QkZovwGBR93q+9XRf87+wsKZesl3PWkfzwEJ5k5tsh/nfhEX9j3yg
+        osuQDQsqKvrInIO3zg1GCbjIFohuEc/TgjD0A3Y6+oF+XhDCpACDuS8IgSvAQJcexPDcyr5BlbaTQN/9
+        YU/ajmG4FgHlCjDwSZD4V9pa8FIUHytCS4PZOv8DAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="btnMin.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABkAAAAZCAYAAADE6YVjAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        DAAACwwBP0AiyAAAAFpJREFUSEvt0UEKgDAMRNEsexS7E7xaj61eof5IoHRt3Og8mE1Ch5aaiPxV772Q
+        lWwP4udLVM5YVHKSDAepUT0wbPc6T4vqgaG/xG+QYSdLVM9YvPsnIvJ5Zhcirm7FHfY0uAAAAABJRU5E
+        rkJggg==
+</value>
+  </data>
+  <data name="btnMax.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABkAAAAZCAYAAADE6YVjAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        DAAACwwBP0AiyAAAAKpJREFUSEvtkzEOwkAMBI+/UYEQz+ELfIk6ooOn0FBBBRszipQ7Hxe5QUI30hb2
+        btZFktQJ86ozEJnQbiVdzXUgVoLvUTtyMdeBWAl+PbAAKvqRZVDx9cgwijGEnj9JZ8ZOB/RV7KUdY4hm
+        h8yn9GAM0eyQaTCGoOL3f7zBGIKK9hFxyOS+SO23WW6UQaQE3+NGZIb2949dQqRE3rGiNZEZ2m+y3CQi
+        f0VKb3daqtjOp5URAAAAAElFTkSuQmCC
 </value>
   </data>
 </root>
