fix allowance bug, attendance and history log switched

--- a/payrollsystemsti/AdminTabs/dashBoard.resx
+++ b/payrollsystemsti/AdminTabs/dashBoard.resx
@@ -628,10 +628,10 @@
         Du2FGYMYixiTGJsYoyi56zoe1bNp0/8PX/iJly+1qwsAAAAASUVORK5CYII=
 </value>
   </data>
-  <data name="pictureBox1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="pb_PaidLeaves.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAgAAAAIACAYAAAD0eNT6AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        vgAADr4B6kKxwAAAL1hJREFUeF7t3S24LbeVJmCzgQ0DAwMDAw0NAw0DDRsGhgUaBgYaBgYaGhoGNgxs
+        vQAADr0BR/uQrQAAL1hJREFUeF7t3S24LbeVJmCzgQ0DAwMDAw0NAw0DDRsGhgUaBgYaBgYaGhoGNgxs
         OHSmvri3++RY5979U5KWVO/7PB+YmZ72uXvXrlJJS0tfAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
         AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABQz2+PfPkuvzkCAGwiD/Y/HfnbkR+P/L/PJP8z
         fzzy6yMAwEL+z5E/HPnhSOshf2/+esRAAACKy9v+X47895HWA/2Z5H/XV0cAgGJ+f+Se6f1Xkv8GAFBA
